[package]
name = "asciiframe"
version = "1.2.0"
keywords = ["cli", "ascii", "opencv"]
categories = ["command-line-utilities"]
description = "Watch any video in the terminal with ASCII"
homepage = "https://github.com/ltgr/asciiframe"
authors = ["Luke"]
license = "MIT"
edition = "2018"
exclude = ["ci/*", "examples/*"]

[[bin]]
name = "asc"
path = "src/bin/asc/main.rs"

[dependencies]
clap = { version = "3.2.2", features = ["derive", "cargo"] }
opencv = "0.66"
indicatif = "0.17.0"
terminal_size = "0.2.1"
ansi_term = "0.12.1"
# ansi_colours = "^1.0"

[profile.release]
opt-level = 3
debug = 0
lto = true
