[package]
name = "asciiframe"
version = "2.0.0"
keywords = ["cli", "ascii", "opencv"]
categories = ["command-line-utilities"]
description = "Convert any video to a stream of ASCII frames"
homepage = "https://github.com/luke-rt/asciiframe"
authors = ["Luke"]
license = "MIT"
edition = "2021"
exclude = ["tests/sources", "docs", ".github"]

[dependencies]
thiserror = "1.0"
opencv = "0.88.5"

clap = { version = "4.4.11", features = ["derive", "cargo"], optional = true }
terminal_size = { version = "0.3.0", optional = true }

[features]
default = ["application"]
application = ["clap", "terminal_size"]

[[bin]]
name = "asc"
path = "src/bin/asc/main.rs"
required-features = ["application"]

[lib]
name = "asciiframe"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = 0
lto = true
